# interpolation_and_regression

./: CMakeLists.txt  headers.h  interpolation.cpp  interpolation.h  main.cpp  regression.cpp
